libs/@local/hashql/ast/tests/ui/lower/expander/special-form-expander/unknown-special-form-typo.jsonc
//@ run: fail
//@ description: Given a unknown special form, suggest a correct one
["::kernel::special_form::nuwtype"]
//~^ ERROR cannot find value `nuwtype` in module `::kernel::special_form`
